--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,3 +20,10 @@ services:
       - "8081:8081"
     volumes:
       - ".:${GO_PROJECT_DIR}"
+  logger:
+    build: "./docker/go-develop"
+    container_name: "logger"
+    environment:
+      GO_WORK_DIR: "${GO_PROJECT_DIR}/logger"
+    volumes:
+      - ".:${GO_PROJECT_DIR}"
